cm4all-beng-proxy (0.6.2) unstable; urgency=low

  * lock: fixed race condition in debug flag updates

 --

cm4all-beng-proxy (0.6.1) unstable; urgency=low

  * session: consistently lock all session objects
  * rewrite-uri: check if widget_external_uri() returns NULL
  * widget-uri: don't generate the "path" argument when it's NULL
  * widget-uri: strip superfluous question mark from widget_base_address()
  * widget-uri: append parameters from the template first
  * widget-uri: re-add configured query string in widget_absolute_uri()
  * widget-uri: eliminate configured query string in widget_external_uri()
  * processor: don't consider session data for base=child and base=parent

 -- Max Kellermann <mk@cm4all.com>  Fri, 03 Jul 2009 15:52:01 +0200

cm4all-beng-proxy (0.6) unstable; urgency=low

  * inline-widget: check the widget HTTP response status
  * response: don't apply transformation on failed response
  * resource-address: include pipe arguments in filter cache key
  * handler: removed session redirect on the first request
  * http-cache: accept ETag response header instead of Last-Modified
  * filter-cache: don't require Last-Modified or Expires
  * file-handler: disable ETag only when processor comes first
  * file-handler: read ETag from xattr
  * pipe: generate new ETag for piped resource
  * session: purge sessions when shared memory is full
  * handler: don't enforce sessions for filtered responses

 -- Max Kellermann <mk@cm4all.com>  Tue, 30 Jun 2009 17:48:20 +0200

cm4all-beng-proxy (0.5.14) unstable; urgency=low

  * ajp-client: implemented request body
  * cookie-client: obey "max-age=0" properly
  * processor: forward the original HTTP status
  * response, widget-http: don't allow processing resource without body
  * widget-http: check the Content-Type before invoking processor
  * response: pass the "Location" response header
  * debian: added a separate -optimized-dbg package