@@ -1,6 +1,7 @@
 cm4all-beng-proxy (0.6.2) unstable; urgency=low
 
   * lock: fixed race condition in debug flag updates
+  * session: use rwlock for the session manager
 
  --
 
